css/style.css
/* ... */
.ftco-footer {
	font-size: 16px;
	background: #000000;
	padding: 7em 0;
	z-index: 0;
}
.ftco-footer .ftco-footer-logo {
	text-transform: uppercase;
	letter-spacing: 0.1em;
}
.ftco-footer .ftco-footer-widget h2 {
	font-weight: normal;
	color: #fff;
	margin-bottom: 40px;
	font-size: 22px;
	font-weight: 600;
}
.ftco-footer .ftco-footer-widget ul li {
	margin-bottom: 10px;
}
.ftco-footer .ftco-footer-widget ul li a {
	color: rgba(255, 255, 255, 0.6);
}
.ftco-footer .ftco-footer-widget ul li a span {
	color: rgba(255, 255, 255, 0.6);
}
.ftco-footer .ftco-footer-widget .btn-primary {
	background: #fff !important;
	border: 2px solid #fff !important;
}
.ftco-footer .ftco-footer-widget .btn-primary:hover {
	background: #fff;
	border: 2px solid #fff !important;
}
.ftco-footer p {
	color: rgba(255, 255, 255, 0.7);
}
.ftco-footer a {
	color: rgba(255, 255, 255, 0.7);
}
.ftco-footer a:hover {
	color: #fff;
}
.ftco-footer .ftco-heading-2 {
	font-size: 17px;
	font-weight: 400;
	color: #000000;
}

.ftco-footer-social li {
	list-style: none;
	margin: 0 10px 0 0;
	display: inline-block;
}
.ftco-footer-social li a {
	height: 50px;
	width: 50px;
	display: block;
	float: left;
	background: rgba(255, 255, 255, 0.1);
	border-radius: 50%;
	position: relative;
}
.ftco-footer-social li a span {
	position: absolute;
	font-size: 26px;
	top: 50%;
	left: 50%;
	-webkit-transform: translate(-50%, -50%);
	-ms-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
}
.ftco-footer-social li a:hover {
	color: #fff;
}

.footer-small-nav > li {
	display: inline-block;
}
.footer-small-nav > li a {
	margin: 0 10px 10px 0;
}
.footer-small-nav > li a:hover,
.footer-small-nav > li a:focus {
	color: #ffbd39;
}

.media .ftco-icon {
	width: 100px;
}
.media .ftco-icon span {
	color: #ffbd39;
}

#map {
	width: 100%;
}
@media (max-width: 767.98px) {
	#map {
		height: 300px;
	}
}

@-webkit-keyframes pulse {
	0% {
		-webkit-box-shadow: 0 0 0 0 rgba(255, 189, 57, 0.4);
	}
	70% {
		-webkit-box-shadow: 0 0 0 30px rgba(255, 189, 57, 0);
	}
	100% {
		-webkit-box-shadow: 0 0 0 0 rgba(255, 189, 57, 0);
	}
}

@keyframes pulse {
	0% {
		-moz-box-shadow: 0 0 0 0 rgba(255, 189, 57, 0.4);
		-webkit-box-shadow: 0 0 0 0 rgba(255, 189, 57, 0.4);
		box-shadow: 0 0 0 0 rgba(255, 189, 57, 0.4);
	}
	70% {
		-moz-box-shadow: 0 0 0 30px rgba(255, 189, 57, 0);
		-webkit-box-shadow: 0 0 0 30px rgba(255, 189, 57, 0);
		box-shadow: 0 0 0 30px rgba(255, 189, 57, 0);
	}
	100% {
		-moz-box-shadow: 0 0 0 0 rgba(255, 189, 57, 0);
		-webkit-box-shadow: 0 0 0 0 rgba(255, 189, 57, 0);
		box-shadow: 0 0 0 0 rgba(255, 189, 57, 0);
	}
}

.heading-section {
	position: relative;
}
.heading-section .subheading {
	font-size: 13px;
	font-weight: 500;
	display: block;
	margin-bottom: 5px;
	text-transform: uppercase;
	color: black;
	letter-spacing: 3px;
}
.heading-section h1.big {
	position: absolute;
	top: 0px;
	left: 0;
	font-size: 7vw;
	color: rgba(255, 255, 255, 0.1);
	z-index: -1;
	font-weight: 900;
}
.heading-section h1.big.big-2 {
	right: 0;
}
.heading-section h2 {
	font-size: 50px;
	font-weight: 700;
}
.heading-section h2 span {
	font-weight: 400;
}
@media (max-width: 767.98px) {
	.heading-section h2 {
		font-size: 38px;
	}
}
.heading-section.heading-section-white .subheading {
	color: rgba(255, 255, 255, 0.9) !important;
}
.heading-section.heading-section-white h2 {
	color: #fff;
}
.heading-section.heading-section-white p {
	color: rgba(255, 255, 255, 0.9);
}

.img,
.blog-img,
.user-img {
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
}

.image-popup {
	cursor: -webkit-zoom-in;
	cursor: -moz-zoom-in;
	cursor: zoom-in;
}

.mfp-with-zoom .mfp-container,
.mfp-with-zoom.mfp-bg {
	opacity: 0;
	-webkit-backface-visibility: hidden;
	-webkit-transition: all 0.3s ease-out;
	-moz-transition: all 0.3s ease-out;
	-o-transition: all 0.3s ease-out;
	transition: all 0.3s ease-out;
}

.mfp-with-zoom.mfp-ready .mfp-container {
	opacity: 1;
}

.mfp-with-zoom.mfp-ready.mfp-bg {
	opacity: 0.8;
}

.mfp-with-zoom.mfp-removing .mfp-container,
.mfp-with-zoom.mfp-removing.mfp-bg {
	opacity: 0;
}

#section-counter {
	position: relative;
	z-index: 0;
}

@media (max-width: 1199.98px) {
	.ftco-counter {
		background-position: center center !important;
	}
}

.ftco-counter .block-18 {
	display: block;
	width: 100%;
	text-align: center;
	background: #191919;
	padding: 30px 20px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	-ms-border-radius: 5px;
	border-radius: 5px;
}

.ftco-counter .text strong.number {
	font-weight: 700;
	font-size: 30px;
	color: #ffbd39;
	display: block;
}

.ftco-counter .text span {
	display: block;
	font-size: 16px;
	color: rgba(255, 255, 255, 0.8);
}

@media (max-width: 767.98px) {
	.ftco-counter .counter-wrap {
		margin-bottom: 20px;
	}
}

.ftco-counter .ftco-number {
	display: block;
	font-size: 72px;
	font-weight: bold;
	color: #ffbd39;
}

.ftco-counter .ftco-label {
	font-size: 12px;
	text-transform: uppercase;
	letter-spacing: 0.1em;
}

.block-20 {
	overflow: hidden;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center center;
	position: relative;
	display: block;
	width: 100%;
	height: 350px;
}

.blog-entry {
	position: relative;
}
@media (min-width: 768px) {
	.blog-entry {
		margin-bottom: 30px;
	}
}
@media (max-width: 767.98px) {
	.blog-entry {
		margin-bottom: 30px;
	}
}
.blog-entry .text {
	width: 100%;
	margin: 0 auto;
}
.blog-entry .text .heading {
	font-size: 20px;
	margin-bottom: 16px;
	font-weight: 500;
}
.blog-entry .text .heading a {
	color: #fff;
}
.blog-entry .text .heading a:hover,
.blog-entry .text .heading a:focus,
.blog-entry .text .heading a:active {
	color: #ffbd39;
}
.blog-entry .meta {
	display: inline-block;
	margin-right: 5px;
	margin-bottom: 0;
	font-size: 12px;
	text-transform: uppercase;
	letter-spacing: 2px;
}
.blog-entry .meta span {
	color: #ffbd39;
}
.blog-entry .meta a {
	color: #ffbd39;
}
.blog-entry .meta a:hover {
	color: #ffbd39;
}
/* ... */

